Implements requests to the API

--- a/app/views/movies/index.html.slim
+++ b/app/views/movies/index.html.slim
@@ -1,2 +1,7 @@
 div
-  h1 Hello!
+  h1 Upcoming movies
+  h3 from TMDB
+div
+  - if @movies.present?
+    - @movies.each do |movie|
+      h4= movie['title']
