--- a/app/views/movies/_movie_card.html.slim
+++ b/app/views/movies/_movie_card.html.slim
@@ -1,6 +1,6 @@
 .movie-card
-  h2= movie['title']
-  p= movie['genre']
-  p= movie['overview']
+  h2
+    = link_to movie['title'], movie_path(movie['id'])
+  p= movie['genre_ids']
   p= movie['release_date']
   p= movie['poster_path']
